--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,32 +2,127 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background-color: hsl(0, 0%, 98%);
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
+.Hire{
+  @apply rounded-full bg-gradient-to-br from-purple-500 via-purple-600 to-pink-600 hover:bg-gradient-to-br hover:from-purple-700 hover:via-purple-800 hover:to-pink-800 text-white font-semibold border lg:w-44 focus:outline-none
+}
+
+.nav-link {
+  transition: transform 0.3s ease;
+}
+
+.nav-link:hover {
+  transform: translateX(5px); /* Adjust the value according to your preference */
+}
+
+/* Tab button styles */
+.TabButton {
+  cursor: pointer;
+  padding: 8px;
+  border: none;
+  background-color: transparent;
+  color: #ADB7BE;
+  font-weight: bold;
+  transition: color 0.3s ease;
+}
+.TabButton.active {
+  color: white;
+}
+
+/* Tab content styles */
+.TabContent {
+  margin-top: 20px;
+  color: #ADB7BE;
+}
+.TabContent ul {
+  list-style-type: none;
+  padding: 0;
+}
+.TabContent ul li {
+  margin-bottom: 8px;
+}
+.TabContent a {
+  color: #ADB7BE;
+  text-decoration: none;
+}
+.TabContent a:hover {
+  text-decoration: underline;
+}
+
+section{
+  min-height: 100vh;
+}
+
+.card-container {
+  display: flex;
+  justify-content: center;
+}
+
+.card {
+  position: relative;
+  width: 300px;
+  height: 300px;
+  background-color: #fff;
+  border-radius: 10px;
+  overflow: hidden;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease;
+}
+
+.card:hover {
+  transform: translateY(-5px);
+}
+
+.image-container {
+  width: 100%;
+  height: 60%;
+}
+
+.image-container img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.card-content {
+  padding: 20px;
+}
+
+.card-content h3 {
+  margin: 0;
+  font-size: 1.5rem;
+  color: #333;
+}
+
+.card-content p {
+  margin: 10px 0 0;
+  font-size: 1rem;
+  color: #666;
+}
+
+
+.stars {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  background-image: url("https://media.istockphoto.com/id/1401278160/photo/meteor-trails-in-the-night-sky-beautiful-meteor-shower-falling-stars.jpg?s=612x612&w=0&k=20&c=GCLm7nsTQ2-WTBgOuKPptAs5WOLigBioTBS-d7qIQE8=");
+  animation: falling-stars 10s linear infinite;
+}
+
+@keyframes falling-stars {
+  from {
+    transform: translateY(-100%);
+  }
+  to {
+    transform: translateY(100%);
   }
 }
+
+
